--- a/index.html
+++ b/index.html
@@ -536,9 +536,9 @@
       </ul>
       <div class="footer__contact">
           <adress class="adress">
-        Украина, Харьков ул. Тобольская, 63
+        Ukraine, Kharkiv st. Tobolska, 112
     </adress>
-    <a class="phone" href="tel:+3806765252222">(38067) 65 252 222</a>
+    <a class="phone" href="tel:+3806765252222">(38000) 65 252 222</a>
     <a class="email" href="mailto:info@mail.com">info@mail.com</a>
     <a class="go-top" href="#body">
       </div>
